src/test/test-models/bad/binomial_coefficient_sample.stan
data {
  real y;
}
model {
  y ~ binomial_coefficient(5);
}
